# rust-experiments

./: .gitignore  AGENTS.md  Cargo.toml  README.md
atomics-vs-mutex/: Cargo.toml
atomics-vs-mutex/benches/: atomic_vs_mutex_bench.rs
atomics-vs-mutex/src/: lib.rs
benches/: cache_padding_bench.rs
cache-padding/: Cargo.toml
cache-padding/src/: lib.rs  main.rs
my-experiments/: README.md
my-experiments/rust/: cache-padding-false-sharing.md
src/: main.rs
tokio-vs-thread-spawning/: Cargo.toml
tokio-vs-thread-spawning/benches/: tokio_vs_thread_spawning_bench.rs
tokio-vs-thread-spawning/src/: lib.rs  main.rs
