[package]
name = "cache_padding_demo"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "cache_padding_bench"
harness = false

[lib]
name = "cache_padding_demo"
path = "src/lib.rs"

[[bin]]
name = "demo"
path = "src/main.rs"

[[bin]]
name = "unpadded_only"
path = "src/bin/unpadded_only.rs"

[[bin]]
name = "padded_only"
path = "src/bin/padded_only.rs"
